# rust-web-crawler

./: .gitignore  ADDITIONAL_RULES_7-11_EXPLANATION.md  AI_AGENT_CONFIG.md  AI_DEVELOPMENT_GUIDELINES.md  BUILDING_BLOCKS_IMPROVEMENTS.md  COMPLIANCE_ASSESSMENT_REPORT.md  Cargo.toml  FEATURES_SUMMARY.md  LICENSE  LICENSE-COMMERCIAL  LICENSE-NONCOMMERCIAL  PROCESSING_REORGANIZATION.md  PersonalNote.md  README.md  REFACTORING_SUMMARY.md  TESTING.md  package-lock.json  package.json
benches/: core_benchmarks.rs  simple_core_bench.rs
config/: crawler_config_example.toml  development.toml  production.toml  staging.toml
crawl_data/: crawl_1755164049_1aecc82f.json  crawl_1755164049_2da8c459.json  crawl_1755164049_31725ab9.json  crawl_1755164049_b62cf17d.json  crawl_1755164254_1aecc82f.json  crawl_1755164254_2da8c459.json  crawl_1755164254_31725ab9.json  crawl_1755164254_b62cf17d.json  crawl_1755167811_1aecc82f.json  crawl_1755167811_2da8c459.json  crawl_1755167811_31725ab9.json  crawl_1755167811_b62cf17d.json  crawl_1755167829_1aecc82f.json  crawl_1755167829_2da8c459.json  crawl_1755167829_31725ab9.json  crawl_1755167829_b62cf17d.json
demo_output/: crawl_1755161657_2da8c459.json  crawl_1755161659_2da8c459.json
examples/: ip_exposure_analysis.rs  tauri_vs_examples_analysis.rs  test_geo_proxy.rs  test_proxy_crawling.rs  test_proxy_functionality.rs  test_real_proxy.rs  test_source_manager.rs  test_spider_proxy_patterns.rs  test_strict_proxy.rs  test_tauri_exact_config.rs  test_tauri_user_agent.rs  test_yahoo_direct.rs  validate_spider_implementation.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  AppIntegrated.tsx  index.css  main.tsx
frontend/src/api/: configuration.ts  crawler.ts
frontend/src/components/: ConfigurationPanel.tsx  CrawlerDashboard.tsx  CrawlerDashboard_new.tsx  CrawlerForm.tsx  ResultsDisplay.tsx  SettingsSidebar.tsx  StatusDisplay.tsx  Toggle.tsx  index.ts
frontend/src/types/: crawler.ts
src/: AI_AGENT_RULES.md  README.md  config.toml  lib.rs
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  lib_new.rs
src-tauri/src/actors/: crawler_actor.rs  mod.rs
src-tauri/src/api/: commands.rs  mod.rs
src-tauri/src/commands/: config_commands.rs  mod.rs
src-tauri/src/config/: constants.rs  defaults.rs  environment.rs  mod.rs
src-tauri/src/core/: mod.rs  types.rs
src-tauri/src/utils/: helpers.rs  mod.rs  validation.rs
src/common/: mod.rs
src/common/configuration/: config_builder.rs  content_filter_config.rs  crawler_config.rs  http_client_config.rs  mod.rs  proxy_auth.rs  proxy_config.rs  proxy_type.rs  rate_limit_config.rs  retry_config.rs  single_proxy_config.rs
src/common/http_client/: api_params.rs  client.rs  mod.rs  parameters.rs  reqwest_client.rs  response_validator.rs  retry.rs  retry_policy.rs  tests.rs  validation.rs
src/common/primitives/: collections.rs  flags.rs  identifiers.rs  mod.rs  numeric.rs  strings.rs  temporal.rs
src/common/results/: aliases.rs  error_severity.rs  mod.rs  session_result.rs  task_content.rs  task_error.rs  task_result.rs
src/common/statistics/: domain_stats.rs  limit_tracker.rs  mod.rs  performance_metrics.rs  task_counts.rs  window_event_type.rs  windowed_stats.rs
src/common/tasks/: builder.rs  (+6 more)
src/config/: crawler.rs  environment.rs  mod.rs  presets.rs
src/core/: error.rs  error_refactored.rs  mod.rs  traits.rs  types.rs  types_refactored.rs  utils.rs
src/crawler/: engine.rs  engine_refactored.rs  mod.rs
src/logging/: events.rs  formatter.rs  mod.rs
src/network/: client.rs  client_refactored.rs  dns.rs  mod.rs  rate_limit.rs  robots.rs
src/processing/: content.rs  content_refactored.rs  discovery.rs  language.rs  mod.rs
src/queue/: cache.rs  mod.rs  task_queue.rs  task_queue_refactored.rs
src/session/: manager.rs  manager_refactored.rs  mod.rs  result_collector.rs  statistics.rs
src/storage/: data.rs  data_refactored.rs  metrics.rs  metrics_refactored.rs  mod.rs
src/utils/: html.rs  language.rs  logging.rs  mod.rs  session.rs  session_new.rs  url_validation.rs
tests/: core.rs  crawler_integration.rs  network.rs  processing.rs  storage.rs
(+38 files in other folders)
