[package]
name = "rust_web_crawler"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_web_crawler"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "socks"] }
scraper = "0.13"
lol_html = "1.2"
bloom = "0.3"
whatlang = "0.16"
fake-useragent = "0.1"
anyhow = "1.0"
url = "2.4"
rand = "0.8"
unicode-segmentation = "1.10"
regex = "1.10"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
csv = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
reqwest = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core_benchmarks"
harness = false
