[package]
name = "rust_web_crawler"
version = "0.1.0"
edition = "2024"
authors = ["Wei Xiang <boyboi86@gmail.com>"]
description = "High-performance web crawler with desktop interface - dual licensed for non-commercial and commercial use"
license = "CC-BY-NC-ND-4.0"
license-file = "LICENSE-NONCOMMERCIAL"
repository = "https://github.com/boyboi86/rust-web-crawler"
homepage = "https://github.com/boyboi86/rust-web-crawler"
documentation = "https://docs.rs/rust_web_crawler"
readme = "README.md"
keywords = ["web-crawler", "scraping", "tokio", "tauri", "desktop"]
categories = ["web-programming", "network-programming", "data-structures"]

[lib]
name = "rust_web_crawler"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
bytes = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.11", features = ["json", "socks", "gzip", "deflate"] }
scraper = "0.13"
lol_html = "1.2"
bloom = "0.3"
whatlang = "0.16"
fake-useragent = "0.1"
anyhow = "1.0"
thiserror = "1.0"
url = "2.4"
rand = "0.8"
unicode-segmentation = "1.10"
regex = "1.10"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
csv = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
reqwest = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core_benchmarks"
harness = false
