[package]
name = "app"
version = "0.1.0"
description = "Desktop UI for Rust Web Crawler"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
fastrand = "2.0"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.0", features = ["full"] }
url = "2.4"

# Reference to our main web crawler library
rust_web_crawler = { path = ".." }
